VDR Plugin 'epgsearch' Revision History
---------------------------------------

2011-xx-xx; Version 1.0.1
new:
- new bugtracker at http://projects.vdr-developer.org/projects/plg-epgsearch - thanks to Tobias Grimm
- dropped old code for vdr < 1.6.0, thanks to Ville Skyttä for whole pile of patches
- updated MainMenuHooks patch to 1.0.1
- czech translation, thanks to Radek Stastny

fixes:
- fixed a crash when editing blacklists


2011-09-11; Version 1.0.0
new:
- supports vdr-1.6.0 to vdr-1.7.21
- avoid repeats with new 'compare date' entry: compare two events by their date to ignore
  repeats within the same day, week or month
- global blacklists: blacklists for search timers can now be global to exclude
  generally unwanted events (like on my double SD/HD channels). Default mode for search
  timers is now 'only global', but can be  set to 'none' to ignore also global blacklists.
- new setup variable epgsearch.ConflCheckCmd (no gui for this, so edit setup.conf!), that
  allows executing a command for each timer causing a conflict, see the MANUAL for details.
- vdr-1.7.15 has changed the SVDRP default port to 6419, please update this in epgsearch's
  setup menu too!
- there is now an official git repository for epgsearch, that contains the latest
  development.
  First usage:
    git clone git://projects.vdr-developer.org/vdr-plugin-epgsearch.git
  Keep up-to-date with:
    git pull
  Web-git:
    http://projects.vdr-developer.org/git/?p=vdr-plugin-epgsearch.git
  many thanks to the maintainers of projects.vdr-developer.org, especially Tobias
  Grimm
- directory entries from VDR's folders.conf are now also read and offered in the
  directory selection of the timer menu.
- Search timer support for content descriptors as introduced in vdr-1.7.11. This lets you
  search for broadcasts by their type, like "Movie/Drama", "Documentation",...
- Search timers now have a new action "Announce and switch". This announces the