@@ -151,6 +151,7 @@ char* GetRawDescription(const char* descr);
 void PrepareTimerFile(const cEvent* event, cTimer* timer);
 int CompareEventTime(const void *p1, const void *p2);
 int CompareEventChannel(const void *p1, const void *p2);
+int CompareSearchExtPrioDescTerm(const void *p1, const void *p2);
 bool EventsMatch(const cEvent* event1, const cEvent* event2, bool compareTitle, int compareSubtitle, bool compareSummary, int compareDate, unsigned long catvaluesAvoidRepeat, int matchLimit=90);
 int ChannelNrFromEvent(const cEvent* pEvent);
 void DelTimer(int index);
